fix(styling): remove scrollbar styling

--- a/next-tavla/src/Admin/scenarios/TileSettings/components/TileSettingsWrapper/styles.module.css
+++ b/next-tavla/src/Admin/scenarios/TileSettings/components/TileSettingsWrapper/styles.module.css
@@ -16,12 +16,3 @@
     overflow: auto;
     position: relative;
 }
-
-.content::-webkit-scrollbar {
-    width: 0.5em;
-    background-color: var(--tertiary-background-color);
-}
-
-.content::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-color);
-}
