--- a/next-tavla/src/Shared/styles/themes/default.css
+++ b/next-tavla/src/Shared/styles/themes/default.css
@@ -8,7 +8,6 @@
     --primary-button-hover-color: #b6bee5;
 
     --primary-lines-grid-color: var(--colors-blues-blue50);
-    --scrollbar-color: var(--colors-blues-blue50);
 
     --table-border-color: var(--colors-blues-blue30);
     --table-situation-color: var(--colors-validation-canary-contrast);
